--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 header{
 	background-color: #579c87;
 	height: 4.8em;
-	font-family: helvetica; sans-serif;
+	font-family: helvetica, sans-serif;
 	font-size: 1.2em;
 	text-align: center;
 	color: #fdcb46;	
@@ -25,7 +25,7 @@ footer{
 	position: fixed;
 	width: inherit;
 	bottom: 0;
-	font-family: helvetica; sans-serif;
+	font-family: helvetica, sans-serif;
 	font-size: 1.2em;
 	color: #fdcb46;
 	padding: 0 0.5em 2.5em 0.5em;
@@ -282,7 +282,7 @@ color: #fdcb46;
 	width: 250px;
 	margin: auto;
 	border-radius: 10px;
-	font-family: helvetica; sans-serif;
+	font-family: helvetica, sans-serif;
 	font-size: 1.5em;
 	text-align: center;
 	color: #fdcb46;
